<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/>
    </parent>

    <groupId>com.portfolio</groupId>
    <artifactId>am-portfolio</artifactId>
    <version>1.0.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>am-common-data</module>
        <module>portfolio-model</module>
        <module>portfolio-market-data</module>
        <module>portfolio-basket</module>
        <module>portfolio-service</module>
        <module>portfolio-api</module>
        <module>portfolio-redis</module>
        <module>portfolio-kafka</module>
        <module>portfolio-app</module>
        <module>portfolio-analytics</module>
        <module>portfolio-sdk</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <spring-boot.version>3.2.3</spring-boot.version>
        <spring-kafka.version>3.1.1</spring-kafka.version>
        <lombok.version>1.18.30</lombok.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <am.investment.version>1.6.24-SNAPSHOT</am.investment.version>
        <am.common.version>1.5.5-SNAPSHOT</am.common.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <am-common-investment.version>1.6.24-SNAPSHOT</am-common-investment.version>
        <am-common-data-parent.version>1.5.5-SNAPSHOT</am-common-data-parent.version>
        <!--
          Observability - pinned to Spring Boot 3.2.3's OTel line.
          Spring Boot 3.2.3 ships opentelemetry-exporter-common 1.31.0; if we let the
          exporter-otlp drift to 1.34.x the runtime crashes with
          NoSuchMethodError: HttpExporterBuilder.addConstantHeaders. Keep all
          io.opentelemetry:* artifacts on the same 1.31.x line via the BOM below.
        -->
        <micrometer-tracing.version>1.2.3</micrometer-tracing.version>
        <opentelemetry.version>1.31.0</opentelemetry.version>
        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Micrometer Tracing BOM — aligned with Spring Boot 3.2.3 -->
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-tracing-bom</artifactId>
                <version>${micrometer-tracing.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--
              Align ALL io.opentelemetry:* artifacts on one minor line.
              Without this, Spring Boot 3.2 pins opentelemetry-exporter-common 1.31.x while
              opentelemetry-exporter-otlp resolves at 1.34.x, causing a NoSuchMethodError on
              HttpExporterBuilder.addConstantHeaders at startup (preprod CrashLoopBackOff).
            -->
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>${opentelemetry.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.19.7</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mongodb</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>kafka</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>github-investment</id>
            <name>GitHub AM Common Investment Service Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/AM-Portfolio/am-market</url>
        </repository>
    
        <repository>
            <id>github-am-common</id>
            <name>GitHub AM Common Data Model Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/AM-Portfolio/am-portfolio</url>
        </repository>

        <repository>
            <id>github-core</id>
            <name>GitHub AM Core Services Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/AM-Portfolio/am-core-services</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <files>
                                <file>${maven.multiModuleProjectDirectory}/.env</file>
                            </files>
                            <quiet>true</quiet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.11</version>
                <configuration>
                    <excludes>
                        <exclude>**/model/**</exclude>
                        <exclude>**/dto/**</exclude>
                        <exclude>**/config/**</exclude>
                        <exclude>**/exception/**</exclude>
                        <exclude>**/entity/**</exclude>
                        <exclude>**/client/**</exclude>
                        <exclude>**/constants/**</exclude>
                        <exclude>**/*Application.class</exclude>
                        <exclude>**/*Config.class</exclude>
                        <exclude>**/*Exception.class</exclude>
                        <exclude>**/*Constants.class</exclude>
                        <exclude>**/*Properties.class</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/AM-Portfolio/am-portfolio</url>
        </repository>
    </distributionManagement>
</project>
